EPBDS-15993 Fix sonar issues